<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.dccmause.dccmause.CVManualFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/CVAddress"
        android:layout_marginTop="0dp" />
    <EditText
        android:id="@+id/CVAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/CVAddress"
        android:inputType="number" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/CVValue"
        android:layout_marginTop="0dp" />
    <EditText
        android:id="@+id/CVValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/CVValue"
        android:inputType="number" />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/CV_CancelBtn"
            android:layout_width="0dp"
            android:layout_weight="0.33"
            android:layout_height="wrap_content"
            android:text="@string/cancel" />
        <Button
            android:id="@+id/CV_ReadBtn"
            android:layout_width="0dp"
            android:layout_weight="0.33"
            android:layout_height="wrap_content"
            android:text="@string/CVRead" />
        <Button
            android:id="@+id/CV_WriteBtn"
            android:layout_width="0dp"
            android:layout_weight="0.33"
            android:layout_height="wrap_content"
            android:text="@string/CVWrite" />
    </LinearLayout>

</LinearLayout>
