<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/CV_Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"/>

    <TextView
        android:id="@+id/CV_Desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.33"
            android:text="@string/CVMinValue" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.33"
            android:text="@string/CVMaxValue" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.33"
            android:text="@string/CVDflValue" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/CV_Val_Min"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.33"/>
        <TextView
            android:id="@+id/CV_Val_Max"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.33"/>
        <TextView
            android:id="@+id/CV_Val_Dft"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.33"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/CV_Val_Min_Desc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.33" />
        <TextView
            android:id="@+id/CV_Val_Max_Desc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.33" />
        <TextView
            android:id="@+id/CV_Val_Dft_Desc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.33" />
    </LinearLayout>
    <EditText
        android:id="@+id/CV_Val_Value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/CVNewValue"
        android:inputType="text" />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/CV_CancelBtn"
            android:layout_width="0dp"
            android:layout_weight="0.33"
            android:layout_height="wrap_content"
            android:text="@string/cancel" />
        <Button
            android:id="@+id/CV_ReadBtn"
            android:layout_width="0dp"
            android:layout_weight="0.33"
            android:layout_height="wrap_content"
            android:text="@string/CVRead" />
        <Button
            android:id="@+id/CV_WriteBtn"
            android:layout_width="0dp"
            android:layout_weight="0.33"
            android:layout_height="wrap_content"
            android:text="@string/CVWrite" />
    </LinearLayout>

</LinearLayout>